--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "now-realias",
-  "version": "1.0.0",
   "description": "now utility that automatically aliases your deployment to the previous alias",
   "main": "index.js",
   "bin": {
@@ -9,7 +8,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "es5ify": "babel --ignore=node_modules . -d .",
-    "start": "node index.js"
+    "start": "node index.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "keywords": [
     "now"
@@ -24,6 +24,11 @@
     "babel-cli": "^6.14.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-3": "^6.11.0"
+    "babel-preset-stage-3": "^6.11.0",
+    "semantic-release": "^4.3.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/remy/now-realias.git"
   }
 }
