--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "now-realias": "index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tap test/*.test.js -R spec",
     "es5ify": "babel --ignore=node_modules . -d .",
     "start": "node index.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
@@ -15,7 +15,7 @@
     "now"
   ],
   "author": "Remy Sharp",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "babel-runtime": "^6.11.6",
     "now-client": "^0.3.0"
@@ -25,7 +25,10 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-3": "^6.11.0",
-    "semantic-release": "^4.3.5"
+    "proxyquire": "^1.7.10",
+    "semantic-release": "^4.3.5",
+    "sinon": "^1.17.5",
+    "tap": "^7.0.1"
   },
   "repository": {
     "type": "git",
